force-app/main/default/objects/Account/fields/Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Display_Field__c</fullName>
    <label>Display Field</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>