force-app/main/default/objects/Account/fields/ManifestDemo__c.field-meta.xml
<CustomField>
    <fullName>ManifestDemo__c</fullName>
    <label>ManifestDemo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>