force-app/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <label>SLA Serial Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>