force-app/main/default/objects/Account/recordTypes/RT1.recordType-meta.xml
<RecordType>
    <fullName>RT1</fullName>
    <active>true</active>
    <label>RT1</label>
</RecordType>