force-app/main/default/objects/Account/recordTypes/RT2.recordType-meta.xml
<RecordType>
    <fullName>RT2</fullName>
    <active>true</active>
    <label>RT2</label>
</RecordType>