force-app/main/default/objects/Account/validationRules/sic.validationRule-meta.xml
<ValidationRule>
    <fullName>sic</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
OR(
REGEX(Sic,&quot;^\\d{4}$&quot;),
REGEX(Sic,&quot;unknown&quot;)
)
)</errorConditionFormula>
    <errorMessage>SIC must be 4 digit number or unknown</errorMessage>
</ValidationRule>